<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dictionary.DictionaryActivity"
    android:orientation="vertical"
    android:id="@+id/layoutDictionary">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/gradient_menu">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/profile_menu"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/raleway_semibold"
            android:textSize="20sp" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="6dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/verdeClaro">

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/mundo"/>

                <TextView
                    android:id="@+id/languageTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/language"
                    android:gravity="center_vertical"
                    android:textSize="25sp"
                    android:padding="10dp"
                    android:fontFamily="@font/raleway_semibold" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewExamples"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="6dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/verdeClaro">

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/premio"/>

                <TextView
                    android:id="@+id/recordsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/records"
                    android:gravity="center_vertical"
                    android:textSize="25sp"
                    android:padding="10dp"
                    android:fontFamily="@font/raleway_semibold" />
            </LinearLayout>

            <TextView
                android:id="@+id/easyRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:gravity="center"
                android:fontFamily="@font/raleway" />

            <TextView
                android:id="@+id/mediumRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:gravity="center"
                android:fontFamily="@font/raleway" />

            <TextView
                android:id="@+id/hardRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:gravity="center"
                android:fontFamily="@font/raleway" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>



    <!--

     <TextView
         android:id="@+id/exampleOne"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:textSize="15sp"
         android:fontFamily="@font/raleway" />

     <TextView
         android:id="@+id/exampleTwo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:textSize="15sp"
         android:fontFamily="@font/raleway" />

     <TextView
         android:id="@+id/exampleTwo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:textSize="15sp"
         android:fontFamily="@font/raleway" />-->



<!--<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/profile_menu"
    android:textSize="36sp"
    tools:layout_editor_absoluteX="163dp"
    tools:layout_editor_absoluteY="305dp" />

-->